--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,12 @@
 SECRET_KEY=django-insecure-b6yg4+min*76m+d#jtgy4qyj56gpz#+07v#5(d2jk=_qz&36ay
 
-POSTGRES_DB=reservation_db
-POSTGRES_USER=reservation_user
-POSTGRES_PASSWORD=1014
-POSTGRES_HOST=reservation_db
-POSTGRES_PORT=5432
+DB_NAME=reservation_db
+DB_USER=reservation_user
+DB_PASSWORD=1014
+DB_HOST=db
+DB_PORT=5432
 
-
+DJANGO_ALLOWED_HOSTS=localhost,127.0.0.1,web,158.160.178.101
 REDIS_URL=redis://redis:6380/0
 
 EMAIL_BACKEND=django.core.mail.backends.smtp.EmailBackend
