--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,7 +20,7 @@ jobs:
           pip install flake8
 
       - name: Run flake8
-        run: .flake8
+        run: flake8 .
 
   test:
     needs: lint
@@ -54,7 +54,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Log in to Docker Hub
-        run: echo "dckr_pat_HvqfpbiWh6BJ-gPR7s3fwIKL_R0" | docker login -u "anna2500" --password-stdin
+        run: echo "${{ secrets.DOCKER_HUB_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_HUB_USERNAME }}" --password-stdin
 
 
       - name: Build Docker image
