--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -13,7 +13,7 @@ services:
       - "5432:5432"
 
   web:
-    build: ./app
+    build: .
     container_name: django_app
     restart: always
     depends_on:
